test/compile_errors/err_private_type_cross_module.w
//! expect-check-fail: symbol 'PrivateType' is private to module

use visibility.private_surface

fn main:
    let _x: PrivateType = PrivateType { value: 1 }
